--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html>
   <head>
     <title>My First Week at Epicodus</title>
-    <link href="css/bootstrap.css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="container">
+      <div class="jumbotron">
     <h1>My First Week at Epicodus</h1>
     <p>
       I've almost finished my first week at Epicodus. Here are some of the things I've learned so far:
     </p>
+      </div>
     <h2>Command Line</h2>
     <ul>
       <li>Navigating my documents through the command line.</li>
