Add bootstrap columns and rows

--- a/index.html
+++ b/index.html
@@ -12,22 +12,23 @@
           I've almost finished my first week at Epicodus. Here are some of the things I've learned so far:
         </p>
     </div>
-    <div class="well">
-    <h2>Command Line</h2>
-     <ul>
-       <li>Navigating my documents through the command line.</li>
-       <li>Creating new files and folders through the command line.</li>
-       <li>Moving and deleting files and folders through the command line.</li>
-       <li>Retrieving my current location from the command line.</li>
-        </ul>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="well">
+          <h2>Command Line</h2>
+          <ul>
+            <li>Navigating my documents through the command line.</li>
+            <li>Creating new files and folders through the command line.</li>
+            <li>Moving and deleting files and folders through the command line.</li>
+            <li>Retrieving my current location from the command line.</li>
+         </ul>
+        </div> 
       </div>
-      <div class="panel panel-default">
-        <div class="panel-body">
-       <div class="panel panel-info">
-         <div class="panel-heading">
-    <h2 class="panel-title">Git and GitHub</h2>
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <h2 class="panel-title">Git and GitHub</h2>          
     </div>
-    <div class="panel-body">
+  <div class="panel-body">
     <ul>     
       <li>Initializing local Git repository, and create remote GitHub repositories.</li>
       <li>Tracking and committing changes with Git.</li>
@@ -38,7 +39,7 @@
       <li class="bg-success">Publishing a website on Github pages</li>
     </ul>
   </div>
-  </div>
+</div>
     <h2>HTML</h2>
     <ul>
       <li>Using HTML tags to create websites.</li>
@@ -48,7 +49,8 @@
       <li>Using both spans and divs.</li>
       <li>Adding classes and ID's to style HTML with CSS.</li>
     </ul>
-    <h2>CSS</h2>
+<div class="row">
+  <h2>CSS</h2>
     <ul>
       <li>Creating a stylesheet.</li>
       <li>Using CSS selectors to specify an HTML element.</li>
@@ -80,6 +82,7 @@
         <p>"It's been really good working with you!"</p>
         <footer>My partner the first day</footer>
       </blockquote>
+      </div>
     </div>
   </body>
 </html>
